# 2025-Australia-s-10-Largest-ETFs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.txt  QUICKSTART.py  README.md  WEBSITE.md  WEBSITE_GUIDE.txt  app.py  examples.py  index.html  pyproject.toml  setup.sh
.streamlit/: config.toml
docs/: README.md  _config.yml  index.html
financial_modelling/: __init__.py  config.py  data_manager.py  metrics.py  models.py  optimization.py
tests/: __init__.py  test_financial_models.py
