[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-financial-modelling"
version = "1.0.0"
description = "Financial modelling system for Australia's 10 largest ETFs"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Financial Analytics Team"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "yfinance>=0.2.30",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "pandas-datareader>=0.10.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["financial_modelling"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
